# K2Rmini_experiments

./: .gitignore  README.md  experiments.py  install.sh  plot.py  tool.py  tools.py
install/: bcalm.sh  bts.sh  cleanifier.sh  deacon.sh  fqgrep.sh  ggcat.sh  grepq.sh  k2rmini.sh  pattern.sh  ripgrep.sh  sbwt.sh  scan.sh  seqkit.sh  sshash.sh
pattern_extract/: .gitignore  Cargo.toml
pattern_extract/src/: main.rs
sbwt_bench/: Cargo.toml
sbwt_bench/src/: main.rs
sbwt_filter/: Cargo.toml
sbwt_filter/src/: main.rs
scan/: simplegrep.c
sshash_filter/: Cargo.toml
sshash_filter/src/: main.rs
