[package]
name = "pattern_extract"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
gxhash = "3.5"
helicase = { git = "https://github.com/imartayan/helicase.git" }
nohash-hasher = "0.2"
packed-seq = "4.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.dev]
opt-level = 1
lto = "thin"
