[package]
name = "pattern_extract"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
helicase = { git = "https://github.com/imartayan/helicase.git", branch = "mask", features = [
    "packed-seq",
] }
nohash-hasher = "0.2"
seq-hash = "0.1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.dev]
opt-level = 1
lto = "thin"
