[package]
name = "sbwt_filter"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossbeam-channel = "0.5"
helicase = { git = "https://github.com/imartayan/helicase.git" }
libc = "0.2"
sbwt = "0.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.dev]
opt-level = 1
lto = "thin"
